<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical">
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
<ToggleButton android:layout_width="match_parent" 
android:id="@+id/toggleButton1" 
android:textOn="@string/ciftDurumluDugmeAktif" 
android:textOff="@string/ciftDurumluDugmePasif" 
android:layout_height="wrap_content">
</ToggleButton>
<TextView android:layout_height="wrap_content" 
android:textAppearance="?android:attr/textAppearanceMedium" 
android:id="@+id/textView1" 
android:text="@string/eposta" 
android:layout_width="match_parent"></TextView>
<EditText android:layout_height="wrap_content" android:id="@+id/editText1" android:inputType="textEmailAddress" android:layout_width="match_parent">
    <requestFocus></requestFocus>
</EditText>

<TextView android:layout_height="wrap_content" 
android:textAppearance="?android:attr/textAppearanceMedium" 
android:id="@+id/textView2" 
android:text="@string/parola"
android:layout_width="match_parent"></TextView>
<EditText android:inputType="textPassword" 
android:id="@+id/editText2" 
android:layout_height="wrap_content" 
android:layout_width="match_parent"
></EditText>
<Button android:layout_width="match_parent" 
android:id="@+id/button1" 
android:text="@string/girisDugmesi"
android:layout_height="wrap_content"></Button>
</LinearLayout>
